examples/compiler_errors/src/index.ts
import { Query } from 'azle';

export function standin(): Query<void> {}
